fixed typed space causing layout shift on mobile

--- a/css/layout.css
+++ b/css/layout.css
@@ -45,4 +45,8 @@
        width: 100%;
         line-height: 1em;
     }
+
+    .typed-space {
+        margin-left: 14px;
+    }
 }
